<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="428">

    <TextView
        android:text="@string/dialog_choose_direction_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="48"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dialog_choose_result_line"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="340">
        <RadioGroup
            android:id="@+id/rgChoosingDirection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </RadioGroup>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dialog_choose_result_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="48">

        <Button
            android:id="@+id/btn_ok_choosing_direction"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/dialog_choose_level_ok"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_cancel_choosing_direction"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_choose_level_cancel"
            android:background="@android:color/transparent"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:paddingBottom="10dp"/>
    </LinearLayout>
</LinearLayout>