<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.RatingFragment"
    android:background="@color/colorPrimaryDark">

    <com.example.hungnv.directionmap.view.DrawView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:text="@string/rating"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:text="@string/place"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6.5">

            <RelativeLayout
                android:id="@+id/rlAutoRating"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:alpha="0">

                <fragment
                    android:id="@+id/place_autocomplete_fragment_rating"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_place_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_direction"
                android:clickable="false"
                android:ellipsize="end"
                android:padding="4dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_alignParentTop="true"
                android:singleLine="true"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:text="@string/level"
            android:textColor="@android:color/white"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/tv_level_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_direction"
            android:clickable="false"
            android:ellipsize="end"
            android:padding="4dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_alignParentTop="true"
            android:singleLine="true"/>

        <Button
            android:id="@+id/btn_submit_rating"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/white"
            android:text="@string/submit"
            android:textSize="14dp"
            android:background="@drawable/login_button"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/containerCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</FrameLayout>