<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="428"
        android:orientation="vertical">

        <TextView
            android:text="@string/dialog_choose_level_header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="64"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingLeft="24dp"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dialog_choose_result_line"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="310">

            <RadioGroup
                android:id="@+id/rg_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingTop="18dp">

                <RadioButton
                    android:id="@+id/level1"
                    android:text="1 (11km/h - 20km/h)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/level2"
                    android:text="2 (6km/h - 10km/h)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/level3"
                    android:text="3 (1km/h - 5km/h)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/level4"
                    android:text="4 (0km/h)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RadioGroup>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dialog_choose_result_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_weight="52"
            android:padding="8dp">
            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dialog_choose_level_ok"
                android:background="@android:color/transparent"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dialog_choose_level_cancel"
                android:background="@android:color/transparent"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>