<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.DirectionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tvTapToClose"
            android:text="@string/tap_to_close"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/from"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8">

            <RelativeLayout
                android:id="@+id/rlAuto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:alpha="0">

                <fragment
                    android:id="@+id/place_autocomplete_fragment"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_direction"
                android:clickable="false"
                android:ellipsize="end"
                android:padding="4dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_alignParentTop="true"
                android:singleLine="true"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/to"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8">

            <RelativeLayout
                android:id="@+id/rlAuto2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:alpha="0">

                <fragment
                    android:id="@+id/place_autocomplete_fragment2"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_direction"
                android:clickable="false"
                android:ellipsize="end"
                android:padding="4dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_alignParentTop="true"
                android:singleLine="true"/>
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>